<?xml version="1.0"?>
<package format="2">
  <name>ros_processing</name>
  <version>0.0.0</version>
  <description>Using Processing in ROS.</description>
  <maintainer email="hermann.hoehne@fh-wedel.de">Hermann Höhne</maintainer>
  <license>GPLv3</license>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>roslib</depend>
  <depend>std_msgs</depend>
</package>
